--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>$Title$</title>
+  <title>Title</title>
+  <meta http-equiv="refresh" content="0; url = https://github.com/NHBKhang/SaleApp/app/templates/index.html">
 </head>
 <body>
-$END$
+  
 </body>
 </html>
