--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Title</title>
-  <meta http-equiv="refresh" content="0; url = https://nhbkhang.github.io/SaleApp/app/templates/index.html">
+  <meta http-equiv="refresh" content="0; url=app/templates/index.html">
 </head>
 <body>
   
