--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" href="https://static.thenounproject.com/png/1180247-200.png">
     <title>Title</title>
     <meta http-equiv="refresh" content="0; url=app/templates/index.html">
 </head>
